# customer_support_agent

./: .env.example  .gitignore  CARLOS_ONBOARDING.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/repositories/feedback_repo/: repository.py
app/routers/: agent_router.py
app/services/agent_webservice/: nodes.py  state.py  workflow.py
app/services/agent_webservice/templates/: respond.txt  router.txt
