[project]
name = "onboarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "google-generativeai>=0.8.6",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "uvicorn>=0.44.0",
]
